# atat

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .prettierignore  .secrets.baseline  Dockerfile  Dockerfile.ops  Pipfile  PortfolioProvision.md  README.md  app.py  atst2.code-workspace  celery_worker.py  docker-compose.yml  ipython_setup.py  nginx.Dockerfile  ops.Dockerfile  package.json  prettier.config.json  pyproject.toml  pytest.ini  python.Dockerfile  requirements.txt  reset_db.sh  sample.json  sonar-project.properties  translations.yaml  uwsgi.ini
.circleci/: README.md  config.yml
.dependabot/: config.yml
alembic/: env.py
ansible/: .gitignore  README.md  bootstrap_pw_dev.yml  databases.yml  dryrun.yml  infra.yml  k8s.yml  ops.yml  provision.yml  pyproject.toml  site.yml
ansible/roles/azure_keyvault/defaults/: main.yml
ansible/roles/azure_keyvault/lookup_plugins/: azure_keyvault_list_secrets.py  azure_keyvault_secret.py  to_hcl.py
ansible/roles/azure_keyvault/tasks/: bootstrap_terraform_secrets.yml  format_secrets.yml  get_secrets.yml  main.yml  secret.yml  secrets_to_json_file.yml  source_secrets.yml  wipe_secrets.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/tasks/: get_variables.yml  main.yml  pull_atat_pem.yml  pull_remote_state.yml  pull_tfvars.yml  push_state_remote.yml  setup.yml  show_outputs.yml
ansible/roles/bootstrap_keyvault/tasks/: main.yml
ansible/roles/circle_ci/defaults/: main.yml
ansible/roles/circle_ci/tasks/: main.yml  run_app_build.yml  run_build.yml  run_ops_build.yml  source_api_token.yml
ansible/roles/crypto/tasks/: main.yml
ansible/roles/db/defaults/: main.yml
ansible/roles/db/tasks/: main.yml  postgres.yml  source_ccpo_user_file.yml
ansible/roles/destroy_bootstrap/defaults/: main.yml
ansible/roles/destroy_bootstrap/tasks/: get_variables.yml  main.yml  show_outputs.yml  teardown.yml
ansible/roles/k8s-deployer/tasks/: main.yml
ansible/roles/k8s-deployer/tasks/templates/: envvars.yml  kustomization.yml
ansible/roles/k8s-provisioner/tasks/: main.yml
ansible/roles/k8s/defaults/: main.yml
ansible/roles/k8s/tasks/: configure_private_cluster.yml  configure_public_cluster.yml  generate_overlay_vars.yml  generate_overlays.yml  main.yml  push_overlays.yml
ansible/roles/k8s/tasks/templates/: envvars.yml  flex_vol.yml  kustomization.yml  nginx_secret.yml  ports.yml
ansible/roles/terraform/defaults/: main.yml
ansible/roles/terraform/lookup_plugins/: azure_keyvault_list_secrets.py  azure_keyvault_secret.py
ansible/roles/terraform/tasks/: generate_tfvars.yml  get_backend.yml  get_variables.yml  main.yml  setup.yml  show_outputs.yml  source_vars_from_storage_account.yml  teardown.yml
ansible/utils/: __init__.py
atat/: app.py  assets.py  filters.py  jobs.py  queue.py  saml_helpers.py
atst/: app.py  filters.py  jobs.py  queue.py
config/: base.ini  ci.ini  test.ini
deploy/: README.md
docs/: EdgeControls.md  SAMLIDP.md  WindowsSubsystemLinux.md
js/: index.js
load-test/: Dockerfile  README.md  locustfile.py
ops/: Makefile  app.tfvars.json.template  build-docker-image-ops-deployment.sh  build-docker-image-python-base.sh  common.py  create-saml-idp.py  create-service-principle.sh  dangerously_delete_resource_groups.sh  deploy-local.sh  entrypoint.sh  fast_delete.sh  requirements.txt
ops/deployer/: pyproject.toml  todo.md
ops/deployer/src/deployer/: ansible_cmds.sh  cli.py  deploy.py
ops/deployer/tests/: test_cli.py  test_deploy.py
ops/phase2/: .gitignore  bastion_provisioner.py  create-saml-idp.py  deployer.py  provisioner.py  pyproject.toml  requirements.txt  tf_app_env_output.json
ops/phase2/deploy_config_test/: service_principle.json
ops/phase2/src/phase2/: provision.py  provisioner.py
sample-server/: README  nginx.conf
script/: README.md  add-aks-perms.sh  add_ccpo_user.py  add_ccpo_users.py  add_users_to_aad_tenant.py  build-docker-image-python-base.sh  cibuild  cluster_migration  console  create_database.py  create_database_user.py  create_db_extension.sh  create_local_certs  database_setup.py  dev_queue  find_unused_translations.py  format  generate_under_maintenance.py  grant_ccpo_perms.py  integration_tests  integration_tests_secure  k8s_config  reset_database.py  secure_server  seed_roles.py  seed_sample.py  sonar_scanner  sonarqube  sync-crls  sync-dod-certs  tail_logs.py  teardown_hybrid.py  test  tf_plan.sh  write_dotenv
styles/: README.md  atat.scss
templates/: base.html  base_error.html  base_private.html  base_public.html  error.html  error_base.html  footer.html  home.html  under_maintenance.html
terraform/: .gitignore  README.md
tests/: check_crl_parse.py  conftest.py  factories.py  mock_azure.py  mocks.py  render_vue_component.py  test_access.py  test_app.py  test_auth.py  test_build_info.py  test_filters.py  test_jobs.py  test_manual_provisioning.py  test_under_maintenence.py  utils.py
uitests/: Add_CCPO_User.html  Add_expired_TO_to_Portfolio.html  Add_future_TO_to_Portfolio.html  Application_Index_with_App.html  Create_New_Application.html  Create_New_TO.html  Create_New_TO_(Base).html  Create_TO_after_other_steps.html  Create_draft_TO.html  Create_expired_TO.html  Create_future_TO.html  Edit_App_Member.html  Edit_Portfolio_Member.html  Login_Brandon.html  New_App_Step_1.html  New_App_Step_2.html  New_App_Step_2_-_Add_Env.html  New_App_Step_3.html  New_Portfolio.html  New_Portfolio_Member.html  New_User_Flow.html  Portfolio_Settings.html  README.md  Reports_-_Basics.html  Reports_-_Empty_State.html  Reports_-_Follow_Add_App_Button.html  Reports_-_Follow_TO_link.html  Reports_-_with_TO,_App,_and_Environments.html  Reports_-_with_active,_expired,_and_upcoming_TOs.html  Reports_-_with_active_and_expired_TOs.html  Reports_-_with_draft_TO.html  Reports_-_with_expired_TO.html  Reports_-_with_future_TO.html  Resend_App_Member_Invite.html  Resend_Portfolio_Member_Invite.html  Revoke_App_Member_Invite.html  Revoke_Environment_Access.html  Revoke_Portfolio_Member_Invite.html  TO_Index_(Landing)_Page_-_Empty_State.html  (+16 more)
(+622 files in other folders)
