[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atst"
homepage = "https://github.com/dod-ccpo/atst"



[tool.poetry.dependencies]
python = "3.7.3"
webassets = "*"
Unipath = "*"
pendulum = "*"
redis = "*"
sqlalchemy = ">=1.3.12"
sqlalchemy-json = "*"
pydantic = "*"
alembic = "*"
"psycopg2-binary" = "*"
flask = "*"
flask-sqlalchemy = "*"
flask-assets = "*"
flask-session = "*"
flask-wtf = "*"
pyopenssl = "*"
requests = "*"
lockfile = "*"
werkzeug = "==0.16.1"
PyYAML = "*"
azure-storage = "*"
azure-storage-common = "*"
celery = "*"
azure-mgmt-subscription = "*"
azure-graphrbac = "*"
msrestazure = "*"
azure-mgmt-authorization = "*"
azure-mgmt-managementgroups = "*"
azure-mgmt-resource = "*"
transitions = "*"
azure-mgmt-consumption = "*"
adal = "*"
azure-identity = "*"
azure-keyvault = "*"
azure-storage-blob = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
pytest = "*"
ipython = "*"
ipdb = "*"
pylint = "*"
factory-boy = "*"
pytest-flask = "*"
pytest-env = "*"
pytest-cov = "*"
selenium = "*"
honcho = "*"
blinker = "*"
pytest-mock = "*"
detect-secrets = "*"
beautifulsoup4 = "*"
mypy = "*"
rope = "*"
black = "^19.10b0"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''
