[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atst"
homepage = "https://github.com/dod-ccpo/atst"



[tool.poetry.dependencies]
python = "3.7.3"
alembic = "*"
azure-storage = "*"
azure-storage-blob = "*"
azure-storage-common = "*"
celery = "*"
flask = "*"
flask-assets = "*"
flask-session = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
lockfile = "*"
msrestazure = "*"
pendulum = "*"
"psycopg2-binary" = "*"
pydantic = "*"
pyopenssl = "*"
PyYAML = "*"
redis = "*"
requests = "*"
sqlalchemy = ">=1.3.12"
sqlalchemy-json = "*"
transitions = "*"
Unipath = "*"
webassets = "*"
werkzeug = "*"
email-validator = '*'

[tool.poetry.dev-dependencies]
bandit = "*"
pytest = "*"
ipython = "*"
ipdb = "*"
pylint = "*"
factory-boy = "*"
pytest-flask = "*"
pytest-env = "*"
pytest-cov = "*"
selenium = "*"
honcho = "*"
blinker = "*"
pytest-mock = "*"
detect-secrets = "*"
beautifulsoup4 = "*"
mypy = "*"
rope = "*"
black = "^19.10b0"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''
