[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat-ansible"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atst"
homepage = "https://github.com/dod-ccpo/atst"



[tool.poetry.dependencies]
python = "3.7.3"
ansible = "2.9.7"
requests = "*"
azure-keyvault = "1.0.0"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"
azure-common = "^1.1.25"
msrestazure = "^0.6.3"
