[tool.poetry]
authors = ["Promptworks <hello@promptworks.com>"]
description = ""
license= "MIT"
name = "atat-ansible"
version = "0.1.0"
repository = "https://github.com/dod-ccpo/atst"
homepage = "https://github.com/dod-ccpo/atst"



[tool.poetry.dependencies]
python = "3.7.3"
requests = "*"
azure-core = "*"
azure-keyvault = "4.0.0"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"
azure-common = "^1.1.25"
msrestazure = "^0.6.3"
azure-identity = "^1.3.1"
azure-storage-common = "*"
psycopg2="*"
pyhcl = { git= "https://github.com/virtuald/pyhcl", tag="0.4.4" }
kubernetes = "^11.0.0"
ansible = "^2.9.11"
openshift = "^0.11.2"
packagin= "*"


[tool.poetry.dev-dependencies]
black = "^19.10b0"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''
