[tool.poetry]
name = "deployer"
version = "0.1.0"
description = "Deploys atat"
authors = ["Jeff Deville <jeff@promptworks.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Click = "^7"
azure-storage-blob = "^12.5.0"
azure-identity = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.18.1"

[tool.poetry.scripts]
cli = "deployer.cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

