[tool.poetry]
name = "phase2"
version = "0.1.0"
description = "Provisions atat"
authors = ["Jeff Deville <jeff@promptworks.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
Click = "^7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.18.1"

[tool.poetry.scripts]
provision = "phase2.provisioner:provision"
# cli = "deployer.cli:cli"
# deploy = "deployer.deploy:deploy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

